# palvelutarjotin

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  .release-please-manifest.json  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  azure-pipelines-release.yml  azure-pipelines-review.yml  azure-pipelines-test.yml  ci.yml  compose.yaml  docker-compose.env.yaml.example  docker-compose.yml  docker-entrypoint.sh  grep  k6LoadTests.js  local_settings.py.example  manage.py  pyproject.toml  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt  setup.cfg  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  load_tests.yml  production.yml  review.yml  staging.yml
.prod/: uwsgi.ini
common/: mixins.py  models.py  notification_service.py  utils.py
common/tests/: conftest.py  json_fixtures.py  notification_template_fixtures.py  test_mixins.py  test_utils.py  utils.py
custom_health_checks/: README.md  apps.py  backends.py  views.py
custom_health_checks/tests/: test_backends.py  test_healthz.py
gdpr/: consts.py  models.py  service.py
gdpr/tests/: conftest.py  keys.py  test_gdpr_api.py
graphene_linked_events/: rest_client.py  schema.py  utils.py
graphene_linked_events/tests/: mock_data.py  test_api.py  test_rest_client.py  test_utils.py  utils.py
linked_events_gql_wrapper/: rest_client.py  schema.py  utils.py
linked_events_gql_wrapper/tests/: test_api.py
neighborhood/: rest_client.py  schema.py  utils.py
neighborhood/tests/: mock_data.py  test_api.py
notification_importers/: admin.py  notification_importer.py
notification_importers/templates/: notification_change_list.html
notification_importers/tests/: test_commands.py  test_notification_file_importer.py  test_notification_google_sheet_importer.py  test_notification_importer.py  utils.py
occurrences/: __init__.py  admin.py  apps.py  consts.py  event_api_services.py  factories.py  filters.py  models.py  notification_services.py  notifications.py  schema.py  schema_services.py  services.py  signals.py  utils.py
occurrences/migrations/: 0001_initial.py  0002_alter_fields.py  0003_add_palvelutarjotin_event.py  0004_add_fields_to_occurrence.py  0005_add_languages_to_occurrence.py  0006_add_enrolment_end_days.py  0006_update_enrolment_unq_constraint.py  0007_add_fields_to_venues.py  0008_update_enrolment_unq_constraint.py  0009_palvelutarjotinevent_organisation.py  0010_remove_occurrence_organisation.py  0011_add_contact_fields_to_p_event.py  0012_palvelutarjotinevent_contact_person.py  0013_add_missing_fields_to_study_group.py  0014_enrolment_status.py  0015_occurrence_cancelled.py  0016_venuecustomdata_outdoor_activity.py  0017_nullable_min_max_group_size.py  0018_move_auto_acceptance_to_p_event.py  0019_remove_palvelutarjotinevent_duration.py  0020_occurrence_seat_type.py  0021_palvelutarjotinevent_mandatory_additional_information.py  0021_study_level.py  0022_palvelutarjotinevent_payment_instruction.py  0022_study_level.py  0022_study_level_data.py  0023_study_group_cleaning.py  0023_study_level_data.py  0024_study_group_cleaning.py  0025_palvelutarjotinevent_payment_instruction.py  0026_remove_palvelutarjotinevent_payment_instruction.py  0027_add_unq_index_to_p_event_le_id.py  0028_add_new_fields_to_venue.py  0029_add_more_occurrence_languages.py  0030_add_new_study_level_data.py  0031_auto_20210714_1044.py  0032_palvelutarjotinevent_external_enrolment_url.py  0033_rename_studygroup_name_field_and_add_unit_id.py  0034_alter_studygroup_unit_name.py  0035_add_enrolment_updated_at_field.py  (+11 more)
occurrences/tests/: mutations.py  notification_template_fixtures.py  queries.py  test_api.py  test_commands.py  test_event_api_services.py  test_models.py  test_notifications.py  test_schema_services.py  test_signals.py
organisations/: admin.py  apps.py  consts.py  decorators.py  factories.py  models.py  notifications.py  schema.py  services.py
organisations/migrations/: 0001_initial.py  0002_update_organisation.py  0003_add_publisher_to_organisation.py  0004_person_language.py  0005_organisationproposal.py  0006_user_is_admin.py  0007_alter_user_first_name.py  0008_person_place_ids.py  0009_alter_user_managers.py  0010_fix_user_manager.py  0011_enforce_non_empty_publisher_id.py  (+5 more)
palvelutarjotin/: apps.py  auditlog_settings.py  consts.py  exceptions.py  oidc.py  schema.py  settings.py  urls.py  views.py  wsgi.py
pipelines/: kultus-api-dev.yml  kultus-api-release.yml  kultus-api-review.yml
reports/: admin.py  apps.py  exceptions.py  factories.py  models.py  schema_extensions.py  serializers.py  services.py  urls.py  utils.py  views.py
servicemap/: rest_client.py  schema.py  services.py  utils.py
verification_token/: admin.py  apps.py  factories.py  models.py
(+153 files in other folders)
