[project]
name = "palvelutarjotin"
version = "1.30.0"
requires-python = ">= 3.12"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
]
extend-per-file-ignores = { "*/migrations/*" = ["E501"], "*/tests/*" = ["E501"] }

[tool.pip-tools.compile]
allow-unsafe = true
generate-hashes = true
strip-extras = true

[tool.coverage.run]
# Coverage run options:
# https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
omit = ["*migrations*", "*site-packages*", "*venv*"]

[tool.pytest.ini_options]
# pytest-django options:
# https://pytest-django.readthedocs.io/en/latest/configuring_django.html
DJANGO_SETTINGS_MODULE = "palvelutarjotin.settings"

# pytest options:
# https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
norecursedirs = ["node_modules", ".git", "venv*"]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]
